update: ticket mapper and service tests